<resources>
    <string name="app_name">Study2Gather</string>
    <string name="splashLogoDesc">Study2Gather</string>
    <string name="splashBgDesc">SplashBackground</string>
    <string name="loginEmailLabel">Email</string>
    <string name="loginPasswordLabel">Password</string>
    <string name="loginLoginBtn">Login</string>
    <string name="loginRegisterBtn">Register</string>
    <string name="loginForgotPasswordBtn">Forgot Password</string>
    <string name="loginEmptyError">Field can\'t be empty!</string>
    <string name="loginEmailError">Enter a valid Email!</string>
    <string name="loginPasswordError">Password must be at least 8 characters!</string>
    <string name="registerPicDesc">registerPic</string>
    <string name="registerTitle">Let\'s Start!</string>
    <string name="registerUsernameLabel">Username</string>
    <string name="registerEmailLabel">Email</string>
    <string name="registerPasswordLabel">Password</string>
    <string name="registerConfirmPasswordLabel">Confirm Password</string>
    <string name="registerSexLabel">Sex</string>
    <string name="registerSexMaleLabel">Male</string>
    <string name="registerSexFemaleLabel">Female</string>
    <string name="registerDOBLabel">DOB</string>
    <string name="registerDOBBtn">Calendar</string>
    <string name="registerRegisterBtn">Register</string>
    <string name="registerEmptyError">Field can\'t be empty!</string>
    <string name="registerUsernameError">Username must be 4–18 characters!</string>
    <string name="registerEmailError">Enter a valid Email!</string>
    <string name="registerPasswordError">Password must be at least 8 characters!</string>
    <string name="registerConfirmPasswordError">Password does not match!</string>
    <string name="registerSexError">Select a Gender!</string>
    <string name="registerDOBError">Enter a Date of Birth!</string>
    <string name="forgotPasswordTitle">Reset Password</string>
    <string name="forgotPasswordBrief">Don\'t worry. Enter your account email and we\'ll send you a link to reset your password. 😉</string>
    <string name="forgotPasswordEmailLabel">Email</string>
    <string name="forgotPasswordResetButton">Send Link</string>
    <string name="homeTitle">Home</string>
    <string name="homeTabTitle">Home</string>
    <string name="homeNoNewPostLabel">There\'s no new post currently. \nCheck back later!</string>
    <string name="homePostCreateButton">Post</string>
    <string name="homePostCreateHint">What\'s on your mind?</string>
    <string name="homePostCreateIncludeImg">Add Image</string>
    <string name="forumTitle">Forum</string>
    <string name="forumTabTitle">Forum</string>
    <string name="forumQuestion">What are the most common job interview questions and how should I answer them?</string>
    <string name="forumAskUsername">Dance The Night Away :D</string>
    <string name="forumCommentCount">1</string>
    <string name="forumAskTime">3 hours ago</string>
    <string name="forumNoNewTopicLabel">There\'s no new topic currently. \nCheck back later!</string>
    <string name="forumQuestDetails">
        So I\'m going to attend my first ever interview for a job tomorrow. What are the tricky interview questions and how to answer them.
    </string>
    <string name="forumQuestDetailsCreateAnsLabel">Know the answer? \nHit the floating button to answer!</string>
    <string name="forumQuestionDetailsAnswer">Answers</string>
    <string name="forumAnswerUsername">What is love? :(</string>
    <string name="forumAnswerTime">2 hours ago</string>
    <string name="forumQuestionDetailsAnswerDetails">
        While it is important to review the most common interview questions, I would also take a look at a \"Performance, Self-Review\" critique of your work. Responses below are specific to the academic field of research I have been involved in for the last 5 years.
        <br /><br /><br />1. What projects have you enjoyed working on the most, and why?
            <br /><br />A: Some of my most highlighted work here at University has been working as a Researcher for a pediatric hematology/oncology study for sickle cell. I had the opportunity to sit down with patients, consent, and administer surveys about their experience as a patient. During this study, I also learned that patients who transition from pediatric care to adult get lost in transition. To address this, I facilitated monthly team meetings with providers, nurses, and social workers from both the adult and pediatric clinic twice a month to ensure data is being reviewed, voicing any concerns, and ensuring patients who are on study are frequently followed up with. We achieved a high retention rate, and even managed to get several of our on study subjects to attend a fall retreat for sickle cell.
            <br /><br /><br />2. What projects are you most proud of?
            <br /><br />A: The first project I took on as a Researcher was for a Dermatology outpatient sunscreen study. I worked alongside a PI who gave me the responsibility of recruiting 60 Hispanic women for a sponsored skin study. I developed multiple recruitment strategies, and successfully recruited the enrollment goal within the recruitment window. Additionally, I learned how to utilized skin measuring devices, and also camera-software to capture images of each patient visit.
            <br /><br /><br />3. What are the things you have learned?
            <br /><br />A: Coming up on 5 years, I have learned about the type of work I prefer doing as a researcher. Finding a balance between patient interaction and data entry is important. The healthy social interaction, and emphasizing the data collection are two-fold, yet I would like to be able to meet and develop a relationship with a patient prior to looking through medical charts.
            <br /><br /><br />4. What are some things you would have done differently looking back?
            <br /><br />A: I was assigned to an observational study in the PICU to look at the epidemiology of bleeding. I went from room to room and spoke with nurses to see if there was any bleeding; whether it was from moderate to severe. I was being asked to classify the type of bleeding, quantify the amount of bleeding, and check ordered meds for each patient who bled. Initially, I struggled with being able to interpret the information I was being asked to collect. Because of this, my time commitment for this study increased and other studies I was assigned to struggled temporarily. Eventually, I called a meeting with my supervisor to come up with a solution — and we decided on adding other researchers to this study. Instead of working longer hours, and committing more time to this study, I would have mentioned something sooner rather than later about the time allocated to this study. Ideally, working smarter and not harder to remediate a situation as the one illustrated would be useful in this circumstance.
            <br /><br /><br />5. What has your boss done to help you do your job better? What could they do differently?
            <br /><br />A: My supervisor was great when it came to answering any relevant questions when it related to the IRB. If I needed any guidance on how to submit a continuing review, do a study status update through RAMS-IRB, or needed to develop an amendment I learned how to do it the day of typically. My level of involvement in site feasibility meetings was very minimal, and for a suggestion I would recommend ensuring assigned CRCs such as myself was involved in the start-up process with the PI and along with the sponsor funding the research.
    </string>
    <string name="forumQuestCreateButton">Ask</string>
    <string name="forumQuestCreateTitleLabel">Title</string>
    <string name="forumQuestCreateTitleHint">Start your question with "What", "How", "Why", etc.</string>
    <string name="forumQuestCreateDescLabel">Description</string>
    <string name="forumQuestCreateDescHint">Elaborate your question.</string>
    <string name="forumAnsCreateButton">Answers</string>
    <string name="forumAnsCreateHint">Elaborate your answer.</string>
    <string name="coursesTitle">Courses</string>
    <string name="coursesTabTitle">Courses</string>
    <string name="coursesEmptySubs">You currently have not subscribed to any courses</string>
    <string name="coursesMyCoursesLabel">My Courses</string>
    <string name="coursesSuggestedCoursesLabel">Suggested Courses</string>
    <string name="coursesCourseName">Introduction to Computer Science and Programming in Python</string>
    <string name="coursesCourseCategory">Programming Language</string>
    <string name="coursesCourseTotalLecture">35 Lectures</string>
    <string name="coursesCourseDetailName">Introduction to Computer Science and Programming in Python</string>
    <string name="coursesCourseDetailAuthor">Kamado Tanjiro</string>
    <string name="coursesCourseDetailSub">Subscribe</string>
    <string name="coursesCourseDetailSubbed">Subscribed</string>
    <string name="coursesCourseDetailDesc">Learn Python Programming the Easy Way!<br /><br />If you want to learn how to write Python programs that can be used on Linux, Mac, and Unix operating systems, code python like a pro, solve real-world problems, or automate repetitive and complex tasks, click the subscribe button!</string>
    <string name="coursesCourseDetailsWYLLabel">What You Will Learn</string>
    <string name="coursesCourseDetailsWYLDetails">How to prepare your computer for programming in Python.</string>
    <string name="coursesCourseDetailsWYLDetails1">Suggested text editors and integrated development environments to use when coding in Python.</string>
    <string name="coursesCourseDetailsWYLDetails2">How to work with various data types including strings, lists, tuples, dictionaries, booleans, and more.</string>
    <string name="coursesCourseDetailsWYLDetails3">How to define and use functions.</string>
    <string name="coursesCourseDetailsWYLDetails4">Important built-in Python functions that you will use often.</string>
    <string name="coursesCourseDetailsWYLDetails5">What modules are, when you should use them, and how to create your own.</string>
    <string name="coursesCourseDetailsWYLDetails6">How to organize your Python programs - Learn what goes where.</string>
    <string name="coursesCourseDetailLect1">Lecture 1 - What is computation?</string>
    <string name="coursesCourseDetailLect1Slide">Slides (PDF)</string>
    <string name="messagesTitle">Messages</string>
    <string name="messagesTabTitle">Messages</string>
    <string name="messagesSender">Tanjiro</string>
    <string name="messagesBrief">Muda Muda Muda!</string>
    <string name="messagesCreateNewChatLabel">Create new chat with friend by tapping the \"+\" icon!</string>
    <string name="messagesCreateChatTitle">Create New Chat</string>
    <string name="messagesCreateChatBtnTitle">New Chat</string>
    <string name="messagesChatCreateToLabel">To:</string>
    <string name="messagesChatUser">Goku</string>
    <string name="profileTitle">Profile</string>
    <string name="profileTabTitle">Profile</string>
    <string name="profileName">Muda (Not Michael Jackson)</string>
    <string name="profileID">\@bakayaro._.</string>
    <string name="profileEmail">\mudaa@bakayaro.com</string>
    <string name="profileBirthday">6 September 2025</string>
    <string name="profileSchool">Singapore Polytechnic</string>
    <string name="profileLocation">Singapore</string>
    <string name="profileEditBtnDesc">Profile Edit</string>
    <string name="profileLogoutButton">Logout</string>
    <string name="profileEditTitle">Edit Profile</string>
    <string name="profileEditPicBtnTxt">Change Profile Photo</string>
    <string name="profileEditNameLabel">Username</string>
    <string name="profileEditEmailLabel">Email</string>
    <string name="profileEditSexLabel">Sex</string>
    <string name="profileEditSexMaleLabel">Male</string>
</resources>