<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/homeTabTitle" />

    <item
        android:id="@+id/navigation_forum"
        android:icon="@drawable/ic_forum_black_24dp"
        android:title="@string/forumTabTitle" />

    <item
        android:id="@+id/navigation_courses"
        android:icon="@drawable/ic_courses_black_24dp"
        android:title="@string/coursesTabTitle" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_messages_black_24dp"
        android:title="@string/messagesTabTitle" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/profileTabTitle" />

</menu>