<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.study2gather.ui.home.HomeFragment"
        android:label="@string/homeTabTitle"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.example.study2gather.ui.forum.ForumFragment"
        android:label="@string/forumTabTitle"
        tools:layout="@layout/fragment_forum" />

    <fragment
        android:id="@+id/navigation_courses"
        android:name="com.example.study2gather.ui.courses.CoursesFragment"
        android:label="@string/coursesTabTitle"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.study2gather.ui.messages.MessagesFragment"
        android:label="@string/messagesTabTitle"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.study2gather.ui.profile.ProfileFragment"
        android:label="@string/profileTabTitle"
        tools:layout="@layout/fragment_profile" />

</navigation>