<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/coursesDetailsImg"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="15dp"
                android:background="@drawable/border_bottom">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/coursesDetailsName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/exo_extrabold"
                        android:text="@string/coursesCourseDetailName"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/coursesDetailsCourseCategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/exo"
                            android:text="@string/coursesCourseCategory"
                            android:textColor="@color/grey"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/coursesDetailsCourseInterpunct"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/exo_extrabold"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:text="‧"
                            android:textColor="@color/grey"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/coursesDetailsCourseTotalLecture"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/exo"
                            android:text="@string/coursesCourseTotalLecture"
                            android:textColor="@color/grey"
                            android:textSize="12sp" />
                    </LinearLayout>

                </LinearLayout>

<!--                <Button-->
<!--                    android:id="@+id/coursesDetailsSubButton"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginLeft="10dp"-->
<!--                    android:backgroundTint="@color/purple_700"-->
<!--                    android:fontFamily="@font/exo_extrabold"-->
<!--                    android:gravity="end"-->
<!--                    android:insetTop="0dp"-->
<!--                    android:insetBottom="0dp"-->
<!--                    android:minWidth="0dp"-->
<!--                    android:minHeight="0dp"-->
<!--                    android:text="@string/coursesCourseDetailSub"-->
<!--                    android:textAlignment="center"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="18sp"-->
<!--                    app:cornerRadius="9999dp" />-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/coursesDetailsDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo"
                    android:text="@string/coursesCourseDetailDesc"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/coursesDetailsWYL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/exo_extrabold"
                    android:text="@string/coursesCourseDetailsWYLLabel"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_done_white_24dp"
                    android:drawablePadding="15dp"
                    android:fontFamily="@font/exo"
                    android:textSize="13sp"
                    android:paddingTop="10dp"
                    android:text="@string/coursesCourseDetailsWYLDetails" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_done_white_24dp"
                    android:drawablePadding="15dp"
                    android:fontFamily="@font/exo"
                    android:textSize="13sp"
                    android:paddingTop="10dp"
                    android:text="@string/coursesCourseDetailsWYLDetails1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_done_white_24dp"
                    android:drawablePadding="15dp"
                    android:fontFamily="@font/exo"
                    android:textSize="13sp"
                    android:paddingTop="10dp"
                    android:text="@string/coursesCourseDetailsWYLDetails2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_done_white_24dp"
                    android:drawablePadding="15dp"
                    android:fontFamily="@font/exo"
                    android:textSize="13sp"
                    android:paddingTop="10dp"
                    android:text="@string/coursesCourseDetailsWYLDetails3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_done_white_24dp"
                    android:drawablePadding="15dp"
                    android:fontFamily="@font/exo"
                    android:textSize="13sp"
                    android:paddingTop="10dp"
                    android:text="@string/coursesCourseDetailsWYLDetails4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_done_white_24dp"
                    android:drawablePadding="15dp"
                    android:fontFamily="@font/exo"
                    android:textSize="13sp"
                    android:paddingTop="10dp"
                    android:text="@string/coursesCourseDetailsWYLDetails5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_done_white_24dp"
                    android:drawablePadding="15dp"
                    android:fontFamily="@font/exo"
                    android:textSize="13sp"
                    android:paddingTop="10dp"
                    android:text="@string/coursesCourseDetailsWYLDetails6" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/coursesDetailsLecture"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo"
                    android:text="@string/coursesCourseDetailLect1"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/coursesDetailsLectureSlide"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo_extrabold"
                    android:text="@string/coursesCourseDetailLect1Slide"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>