<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/registerBackBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_back_arrow_white_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onClick"
        android:background="@android:color/transparent" />

    <ImageView
        android:id="@+id/registerPic"
        android:layout_width="166dp"
        android:layout_height="144dp"
        android:contentDescription="@string/registerPicDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/register_pic" />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="30dp"
        android:text="@string/registerTitle"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:hint="@string/registerUsernameLabel"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:hint="@string/registerEmailLabel"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:hint="@string/registerPasswordLabel"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerConfirmPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:hint="@string/registerConfirmPasswordLabel"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/registerSexLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/registerSexLabel"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerConfirmPassword" />

    <RadioGroup
        android:id="@+id/registerSexGroup"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerSexLabel">

        <RadioButton
            android:id="@+id/registerSexMale"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/registerSexMaleLabel"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/registerSexFemale"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:text="@string/registerSexFemaleLabel"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/registerDOBLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="5dp"
        android:text="@string/registerDOBLabel"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerSexGroup" />

    <Button
        android:id="@+id/registerDOBBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:backgroundTint="@color/purple_500"
        android:drawableLeft="@drawable/calendar"
        android:onClick="onClick"
        android:text="@string/registerDOBBtn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="9999dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerDOBLabel" />

    <TextView
        android:id="@+id/registerDOBTxt"
        android:layout_width="97dp"
        android:layout_height="26dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/registerDOBBtn"
        app:layout_constraintTop_toBottomOf="@+id/registerDOBLabel" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/purple_500"
        android:onClick="onClick"
        android:text="@string/registerRegisterBtn"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="9999dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerDOBBtn"
        app:layout_constraintVertical_bias="0.953" />

    <ProgressBar
        android:id="@+id/registerProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="74dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="164dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>